# flysight-viewer-2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  import.cpp  import.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotspec.h  sessiondata.cpp  sessiondata.h
.claude/docs/: WORKFLOW-REFERENCE.md
.claude/prompts/: implementation-agent.md  implementation-orchestrator.md  phase-documenter.md  planning-coordinator.md  review-agent.md
.github/: CONTRIBUTING.md
.github/workflows/: build.yml
cmake/: BoostDiscovery.cmake  BundlePythonLinux.cmake  BundlePythonMacOS.cmake  BundlePythonWindows.cmake  CreateAppDir.cmake  CreateAppImage.cmake  DeployThirdPartyLinux.cmake  DeployThirdPartyMacOS.cmake  DeployThirdPartyWindows.cmake  GenerateIcon.cmake  GitVersion.cmake  PatchGTSAM.cmake  QtPathDiscovery.cmake  RunLinuxDeployQt.cmake  ThirdPartySuperbuild.cmake  diagnose_macos_bundle.sh  fix_macos_rpaths.sh
docs/: build-system-plan.md  convert-maps-change.md  dock-feature-plan.md  unit-feature-plan.md
docs/implementation-plan/: 00-overview.md  01-build-system.md  01-core-unit-system.md  02-data-import-normalization.md  02-model-layer.md  03-mapbridge-mapwidget.md  03-plotregistry-extension.md  04-display-integration.md  04-google-maps-html.md  05-cleanup-ci.md  05-ui-and-preferences.md  06-plugin-support.md
docs/preference-pages-implementation/: README.md  phase-1-infrastructure.md  phase-2-plots-settings-page.md  phase-3-markers-settings-page.md  phase-4-legend-settings-page.md  phase-5-map-settings-page.md  phase-6-apply-preferences.md  phase-7-integration-testing.md
plugins/: allan_variance.py  flysight_plugin_sdk.py  pitot.py
python_plugins/: flysight_plugin_sdk.py  pitot_tube.py
scripts/: fix_dock_layout.py
src/: CMakeLists.txt  CMakePresets.json  FlySightViewer.rc  Info.plist  Info.plist.in  altitudemarkerfeature.cpp  altitudemarkerfeature.h  attributeregistry.cpp  attributeregistry.h  bridgeimpl.h  calculatedvalue.cpp  calculatedvalue.h  calculatedvaluemanager.cpp  calculatedvaluemanager.h  cpp_bridge.cpp  crosshairmanager.cpp  crosshairmanager.h  cursormodel.cpp  cursormodel.h  dataexporter.cpp  dataexporter.h  dataimporter.cpp  dataimporter.h  dependencykey.h  dependencykey_bindings.cpp  dependencymanager.cpp  dependencymanager.h  gnssfactor.h  graphinfo.h  idlescheduler.cpp  idlescheduler.h  import.cpp  import.h  imugnssekf.cpp  imugnssekf.h  legendmanager.cpp  legendmanager.h  legendpresenter.cpp  legendpresenter.h  legendtablemodel.cpp  (+61 more)
src/calculations/: attributecalculations.cpp  attributecalculations.h  attributeregistration.cpp  attributeregistration.h  barocalculations.cpp  barocalculations.h  calculatedvalueregistry.cpp  calculatedvalueregistry.h  derivativehelper.cpp  derivativehelper.h  gnsscalculations.cpp  gnsscalculations.h  humcalculations.cpp  humcalculations.h  imucalculations.cpp  imucalculations.h  isadensity.cpp  isadensity.h  magcalculations.cpp  magcalculations.h  sensorfusioncalculations.cpp  sensorfusioncalculations.h  simplificationcalculations.cpp  simplificationcalculations.h  spcalculations.cpp  spcalculations.h  timecalculations.cpp  timecalculations.h  vbatcalculations.cpp  vbatcalculations.h  wspcalculations.cpp  wspcalculations.h
src/cmake/: DownloadEmbeddablePython.cmake
src/plottool/: measuretool.cpp  measuretool.h  pantool.h  picktimetool.h  plottool.h  selecttool.cpp  selecttool.h  setcoursetool.cpp  setcoursetool.h  setexittool.cpp  setexittool.h  setgroundtool.cpp  setgroundtool.h  setsynctool.cpp  setsynctool.h  zoomtool.h
src/preferences/: addcolumndialog.cpp  addcolumndialog.h  aerodynamicssettingspage.cpp  aerodynamicssettingspage.h  altitudemarkerssettingspage.cpp  altitudemarkerssettingspage.h  generalsettingspage.cpp  generalsettingspage.h  importsettingspage.cpp  importsettingspage.h  legendsettingspage.cpp  legendsettingspage.h  logbooksettingspage.cpp  logbooksettingspage.h  mapsettingspage.cpp  mapsettingspage.h  markerssettingspage.cpp  markerssettingspage.h  plotssettingspage.cpp  plotssettingspage.h  preferencekeys.h  preferencesdialog.cpp  preferencesdialog.h  preferencesmanager.h  zoomsettingspage.cpp  zoomsettingspage.h
src/qml/: MapDock.qml  VideoSurface.qml
src/resources/: FlySightViewer.icns  map.html.in
src/resources/macos/: FlySightViewer.icns
src/resources/profiles/: Basic_Flight.fvprofile  Canopy_Piloting.fvprofile  Speed_Skydiving.fvprofile  Wingsuit_Performance.fvprofile  profiles.json
src/ui/docks/: AppContext.h  DockFeature.h  DockRegistry.cpp  DockRegistry.h
src/ui/docks/analysis/: AnalysisDockFeature.cpp  AnalysisDockFeature.h  AnalysisDockWidget.cpp  AnalysisDockWidget.h  AnalysisMethodWidget.h  SpeedSkydivingWidget.cpp  SpeedSkydivingWidget.h  StepCommitSpinBox.h  WingsuitPerformanceWidget.cpp  WingsuitPerformanceWidget.h
src/ui/docks/legend/: LegendDockFeature.cpp  LegendDockFeature.h  LegendPresenter.cpp  LegendPresenter.h  LegendTableModel.cpp  LegendTableModel.h  LegendWidget.cpp  LegendWidget.h
src/ui/docks/logbook/: LogbookDockFeature.cpp  LogbookDockFeature.h  LogbookView.cpp  LogbookView.h
src/ui/docks/map/: MapBridge.cpp  MapBridge.h  MapCursorDotModel.cpp  MapCursorDotModel.h  MapCursorProxy.cpp  MapCursorProxy.h  MapDockFeature.cpp  MapDockFeature.h  MapPreferencesBridge.cpp  MapPreferencesBridge.h  MapWidget.cpp  MapWidget.h  TrackMapModel.cpp  TrackMapModel.h
src/ui/docks/markerselection/: MarkerSelectionDockFeature.cpp  MarkerSelectionDockFeature.h
src/ui/docks/plot/: PlotDockFeature.cpp  PlotDockFeature.h  PlotWidget.cpp  PlotWidget.h
src/ui/docks/plotselection/: PlotSelectionDockFeature.cpp  PlotSelectionDockFeature.h
src/ui/docks/video/: VideoDockFeature.cpp  VideoDockFeature.h  VideoWidget.cpp  VideoWidget.h
src/units/: unitconversion.h  unitconverter.cpp  unitconverter.h  unitdefinitions.h
